--- a/couchdb/templates/default/sv-couchdb-run.erb
+++ b/couchdb/templates/default/sv-couchdb-run.erb
@@ -1,3 +1,3 @@
 #!/bin/sh
 exec 2>&1
-exec <%= node[:couchdb][:configure_prefix] %>/bin/couchdb
+exec <%= @node[:couchdb][:configure_prefix] %>/bin/couchdb
